@@ -1,7 +1,7 @@
 AUX 6.5/nbbuild_build.xml.patch 878 RMD160 d1c94abc36c08efc829bfc2c970667d3339a798f SHA1 263d03b1fb9b0de2d24a04570e4e4f519f010731 SHA256 0e3af1266eb78ae509685417930ad6e024699db5d54bfe297b4a7d6a970294aa
 AUX 6.5/nbbuild_templates_projectized.xml.patch 867 RMD160 f368e1f80e1e332e2886c95d023a9b25f456b4e8 SHA1 4cb2e905a07125afa714bfecdcbee0902e81f67b SHA256 388ac6d71ce9d85efc7ec55585ae12ff8607a7b9e6239455a1545033463bf811
-DIST netbeans-6.5-l10n-20081024141538.tar.bz2 12699393 RMD160 bbdc4a1a0b111876cc3c1cb53ce1afa677ae258d SHA1 0cc9bb1a613ef0d37ed860bacdd7f036b5bb8ab0 SHA256 055c3040154996c333541895799897eb2892447784161e37472df069ec2dce77
+DIST netbeans-6.5-l10n-20081024141538.tar.bz2 12679830 RMD160 c32733c5f6c4ac23353fcb4eec33e9e6dff109f1 SHA1 aa164dc82b9464704bda9705b6323bf8c1b4f68b SHA256 14ee6a2777a9eb332a10186119244076640978b6d0fe4a20fb99adcc041c3c5f
 DIST netbeans-6.5rc1-200810171318-src.zip 278989368 RMD160 0ab73329699ef960a725fb1152404890159bde59 SHA1 7ac0ca333f23dbb1d70751eb5ee13f5395902099 SHA256 b11ffd3719f5129a3e86f0ab61fcbcdf6ff6927bd15126386441956170ec3835
-EBUILD netbeans-6.5_rc1.ebuild 36406 RMD160 89e270406507f092e8535f960e11e456b29757d9 SHA1 3f2406b24d15c521674853afc558189257998d3b SHA256 17c297403d6eff74b7ade3942fb39c1ed632454a7e58a29da7f403336e931b80
-MISC ChangeLog 28030 RMD160 a2f02044c527fd9f975ab9d3cde1a4b6accbe727 SHA1 5a51518acb13ee80b0af42d4979bd1c97fe295e6 SHA256 d84d00a2c38be383ff2f6bd7a149e1a51f06c36f36b52757e895d32c2e4ad45a
+EBUILD netbeans-6.5_rc1.ebuild 36559 RMD160 1ae55fcd31be20ea1406a2582f7b0c42aee18a77 SHA1 f9c5b7a5e2a96d6400a49633c9616408adad6ead SHA256 071a4b210b82bd3c5c335e1cd52e7b28218c67695231de036c319b7681f61eb2
+MISC ChangeLog 28193 RMD160 d2572acdbbff030ecf7b68af497d0d31845d2bdc SHA1 9ba45002b7fd8e60e31f99b62012b11a5cda5ba8 SHA256 9aa051b8672c445e6e3e58690c1103fc1ae0b024c3b359a9df63c8350799c97c
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
